// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render as another element 1`] = `
<p
  class="emotion-0 emotion-1"
>
  <span />
</p>
`;

exports[`props should render correctly 1`] = `
<div
  class="emotion-0 emotion-1"
>
  <span />
</div>
`;

exports[`props should render with custom styles (Array) 1`] = `
<p
  class="emotion-0 emotion-1"
>
  <span />
</p>
`;

exports[`props should render with custom styles (object) 1`] = `
<p
  class="emotion-0 emotion-1"
>
  <span />
</p>
`;

exports[`props should render with custom styles (string) 1`] = `
<p
  class="emotion-0 emotion-1"
>
  <span />
</p>
`;
